--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 src=""
                 frameborder="0"
                 allowfullscreen
-              ></iframe>
+              > carregando..</iframe>
             </div>
           </div>
         </div>
