--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="sortcut icon" href="/assets/icon.png">
     <title>Painel de Vagas</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link 
