--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
       </div>
     </div>
   </div>
-  <div class="info">
-    <h4>Projeto Recoloca</h4>
-  </div>
+  <footer></footer>
   <script src="./js/scripts.js"></script>
   <script src="./js/menu.js"></script>
 </body>
