--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>
           Indicações de vagas de emprego
         </h2>
-        <p>
+        <p id="seila" >
           No meio desse periodo dicifil, encontramos uma forma de te ajudar a encontrar vagas e ter uma boa indicação.
         </p>
         <a href="https://forms.gle/APWr5k57KL5ipnH56" class="button">Apoie-nos</a>
@@ -59,7 +59,7 @@
   </section>
 
   <main>
-    <h1>Vagas</h1>
+    <h1 id="vagas">Vagas</h1>
     <section class="cards">
       <div class="card">
         <div class="image">
