--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <nav>
           <ul>
             <li>
-              <a href="#cards">Vagas</a>
+              <a id="linksiniciais" href="#hero">Vagas</a>
             </li>
             <li>
-              <a href="#">Anunciar vagas</a>
+              <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Anunciar vagas</a>
             </li>
             <li>
-              <a href="https://forms.gle/APWr5k57KL5ipnH56">Entre em contato</a>
+              <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Entre em contato</a>
             </li>
           </ul>
         </nav>
@@ -53,7 +53,7 @@
         <p id="seila" >
           No meio desse periodo dicifil, encontramos uma forma de te ajudar a encontrar vagas e ter uma boa indicação.
         </p>
-        <a href="https://forms.gle/APWr5k57KL5ipnH56" class="button">Apoie-nos</a>
+        <a href="https://forms.gle/RDcB373XC9fWCuEm9" class="button">Apoie-nos</a>
       </div>
     </div>
   </section>
@@ -67,14 +67,12 @@
         </div>
         <div class="content">
           <p class="title text--medium">
-            Formulário Animado com JS puro e CSS Animation | Mayk Brito
           </p>
           <div class="info">
-            <a href="https://forms.gle/APWr5k57KL5ipnH56">
+            <a href="">
               <p class="text--medium">Cadastre-se</p>
             </a>
-            <p class="price text--medium">Email</p>
-            
+            <p class="price text--medium"></p>
           </div>
         </div>
       </div>
@@ -85,7 +83,7 @@
     <div class="modal">
       <a class="close-modal">
         <svg viewBox="0 0 20 20">
-          <path fill="#000000"
+          <path fill="#fff"
             d="M15.898,4.045c-0.271-0.272-0.713-0.272-0.986,0l-4.71,4.711L5.493,4.045c-0.272-0.272-0.714-0.272-0.986,0s-0.272,0.714,0,0.986l4.709,4.711l-4.71,4.711c-0.272,0.271-0.272,0.713,0,0.986c0.136,0.136,0.314,0.203,0.492,0.203c0.179,0,0.357-0.067,0.493-0.203l4.711-4.711l4.71,4.711c0.137,0.136,0.314,0.203,0.494,0.203c0.178,0,0.355-0.067,0.492-0.203c0.273-0.273,0.273-0.715,0-0.986l-4.711-4.711l4.711-4.711C16.172,4.759,16.172,4.317,15.898,4.045z">
           </path>
         </svg>
@@ -93,7 +91,7 @@
       <div class="modal-content">
         <div class="video-background">
           <div class="video-foreground">
-            <iframe src="" frameborder="0" allowfullscreen> carregando..</iframe>
+            <iframe src="https://forms.gle/q8a5haioh42gyhMK9" frameborder="0" allowfullscreen> carregando..</iframe>
           </div>
         </div>
       </div>
