--- a/index.html
+++ b/index.html
@@ -2,104 +2,102 @@
 <html>
 
 <head>
-  <link rel="sortcut icon" href="/assets/icon.png">
-  <title>Projeto Recoloca</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 768px)" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/print.css" media="print">
-  <style type="text/css"> 
-    a:link 
-    { 
-     text-decoration:none; 
-    } 
+    <link rel="sortcut icon" href="/assets/icon.png">
+    <title>Projeto Recoloca</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 768px)" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/print.css" media="print">
+    <style type="text/css">
+        a:link {
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
 
-  <header>
-    <div class="container">
-      <img src="./assets/title.png" alt="Painel de Vagas" />
-      <div class="menu-section">
-        <div class="menu-toggle">
-          <div class="one"></div>
-          <div class="two"></div>
-          <div class="three"></div>
+    <header>
+        <div class="container">
+            <img src="./assets/title.png" alt="Painel de Vagas" />
+            <div class="menu-section">
+                <div class="menu-toggle">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a id="linksiniciais" href="#hero">Vagas</a>
+                        </li>
+                        <li>
+                            <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Anunciar vagas</a>
+                        </li>
+                        <li>
+                            <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Entre em contato</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <nav>
-          <ul>
-            <li>
-              <a id="linksiniciais" href="#hero">Vagas</a>
-            </li>
-            <li>
-              <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Anunciar vagas</a>
-            </li>
-            <li>
-              <a id="linksiniciais" href="https://forms.gle/RDcB373XC9fWCuEm9">Entre em contato</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <section class="hero">
-    <div class="container">
-      <div>
-        <h2>
-          Indicações de vagas de emprego
-        </h2>
-        <p id="seila" >
-          No meio desse periodo dicifil, encontramos uma forma de te ajudar a encontrar vagas e ter uma boa indicação.
-        </p>
-        <a href="https://forms.gle/RDcB373XC9fWCuEm9" class="button">Apoie-nos</a>
-      </div>
-    </div>
-  </section>
-
-  <main>
-    <h1 id="vagas">Vagas</h1>
-    <section class="cards">
-      <div class="card">
-        <div class="image">
-          <img src="" />
+    <section class="hero">
+        <div class="container">
+            <div>
+                <h2>
+                    Indicações de vagas de emprego
+                </h2>
+                <p id="seila">
+                    No meio desse periodo dicifil, encontramos uma forma de te ajudar a encontrar vagas e ter uma boa indicação.
+                </p>
+                <a href="https://forms.gle/RDcB373XC9fWCuEm9" class="button">Apoie-nos</a>
+            </div>
         </div>
-        <div class="content">
-          <p class="title text--medium">
-          </p>
-          <div class="info">
-            <a href="">
-              <p class="text--medium">Cadastre-se</p>
-            </a>
-            <p class="price text--medium"></p>
-          </div>
-        </div>
-      </div>
     </section>
-  </main>
 
-  <div class="modal-overlay">
-    <div class="modal">
-      <a class="close-modal">
-        <svg viewBox="0 0 20 20">
+    <main>
+        <h1 id="vagas">Vagas</h1>
+        <section class="cards">
+            <div class="card">
+                <div class="image">
+                    <img src="" />
+                </div>
+                <div class="content">
+                    <p class="title text--medium">
+                    </p>
+                    <div class="info">
+                        <p class="empresa"></p>
+                        <p class="beneficios"></p>
+                        <p class="requisito"></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <a class="close-modal">
+                <svg viewBox="0 0 20 20">
           <path fill="#fff"
             d="M15.898,4.045c-0.271-0.272-0.713-0.272-0.986,0l-4.71,4.711L5.493,4.045c-0.272-0.272-0.714-0.272-0.986,0s-0.272,0.714,0,0.986l4.709,4.711l-4.71,4.711c-0.272,0.271-0.272,0.713,0,0.986c0.136,0.136,0.314,0.203,0.492,0.203c0.179,0,0.357-0.067,0.493-0.203l4.711-4.711l4.71,4.711c0.137,0.136,0.314,0.203,0.494,0.203c0.178,0,0.355-0.067,0.492-0.203c0.273-0.273,0.273-0.715,0-0.986l-4.711-4.711l4.711-4.711C16.172,4.759,16.172,4.317,15.898,4.045z">
           </path>
         </svg>
-      </a>
-      <div class="modal-content">
-        <div class="video-background">
-          <div class="video-foreground">
-            <iframe src="https://forms.gle/q8a5haioh42gyhMK9" frameborder="0" allowfullscreen> carregando..</iframe>
-          </div>
+            </a>
+            <div class="modal-content">
+                <div class="video-background">
+                    <div class="video-foreground">
+                        <iframe src="https://forms.gle/q8a5haioh42gyhMK9" frameborder="0" allowfullscreen> carregando..</iframe>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <footer></footer>
-  <script src="./js/scripts.js"></script>
-  <script src="./js/menu.js"></script>
+    <footer></footer>
+    <script src="./js/scripts.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
