--- a/admin.html
+++ b/admin.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            margin: 0%;
+            display: flex;
+        }
+        
+        h1 {
+            color: aliceblue;
+            align-self: center;
+        }
+        
+        .gif {
+            width: 80%;
+        }
+    </style>
 </head>
-<h1>Em Desenvolvimento...</h1>
 
 <body>
-
+    <h1>Em Desenvolvimento...</h1>
+    <img class="gif" src="/assets/gif/constr.gif" alt="Gif Aleatorio" draggable="false">
 </body>
 
 </html>
